# BlackList

./: .gitignore  CHANGELOG.md  CHANGE_RECORD.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
.trae/rules/: background.md  basic.md
docs/任务清单/: C++ 跨平台解压缩文件夹方案.md  CPU检测、线程配置、内存管理等功能.md  Qt 跨平台网络通信程序.md  simdjson vs coost 库 详细对比.md  二级压缩文件解压及JSON处理方案总结.md  二级压缩解压线程数量分析.md  内存流式处理技术方案及异常处理.md  加载性能分析.md  并行优化实现总结.md  排序问题.md  构建的 coost 静态库（libco.a）来完成集成.md  线程数量设计技术方案.md  线程配置优化方案可行性分析.md  解压线程 + 多线程JSON处理方案.md  解压缩方案比较报告.md  项目优化措施技术文档-2.md  项目分析报告.md  黑名单加载全流程详细分析.md  黑名单加载系统技术方案总结.md  黑名单数据结构分析.md  黑名单查询技术方案比较-优化.md  黑名单查询技术方案比较.md
include/: blacklist_checker.h  blacklist_service.h  card_info_store.h  log_manager.h  memory_pool.h  persist_manager.h  persist_reader.h  platform_utils.h  shared_bloom_filter.h  system_utils.h  test.h  thread_pool.h  zip_basic.h
src/: card_info_store.cpp  main.cpp  shared_bloom_filter.cpp  tcp_server.h  test.cpp  test_simple.cpp
src/core/: blacklist_checker.cpp  blacklist_service.cpp  log_manager.cpp  memory_pool.cpp  persist_manager.cpp  persist_reader.cpp  platform_utils.cpp  system_utils.cpp  thread_pool.cpp
src/net/: tcp_server.cpp
src/zip/: ZipExtractor.cpp  ZipExtractor.h  zip_basic.cpp  zip_utils.cpp  zip_utils.h
test/: dynamic_thread_config_test.md  test_thread_config.cpp  verify_thread_config.py
tests/: test_blacklist.cpp  test_blacklist.h  test_blacklist.json  test_compressed_load.cpp  test_input.bat  test_input.ps1  test_input.txt  test_main.cpp  test_program.ps1  test_run.bat  test_run.ps1
